[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilot-sdk"
version = "0.1.0"
description = "Python SDK for the Pilot notification relay API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://tools.nexomechanics.com/pilot"

[tool.hatch.build.targets.wheel]
packages = ["pilot_sdk"]
